--- a/newday.html
+++ b/newday.html
@@ -80,6 +80,8 @@
 
         <!-- SCRIPTS -->
         <script src="scripts/jquery-2.1.4.js"></script>
+        <script src="scripts/utils.js"></script>
+        <script src="scripts/todo.js"></script>
         <script src="scripts/script.js"></script>
         <script src="scripts/interface.js"></script>
     </body>
